--- a/style.css
+++ b/style.css
@@ -33,11 +33,15 @@ body {
   height: 300px;
   grid-template-columns: repeat(3, 1fr);
   margin: 40px 0px;
+  font-size: 40px;
 }
 
 .cell {
   height: 100px;
   width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #cell-0,
