--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #1b1b1b;
+  background: linear-gradient(to top, #000000, #434343);
+  width: 95%;
+  height: 100%;
   color: #f0f0f0;
+  bottom: 30px;
 }
 
 #content {
@@ -74,14 +77,23 @@ body {
 
 button {
   margin-top: 20px;
-  padding: 5px;
-  background-color: rgb(240, 240, 240);
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgb(43, 76, 128);
   border: none;
   outline: none;
-  transition-duration: 1s;
+  transition-duration: 0.5s;
+  cursor: pointer;
+  color: #f0f0f0;
+}
+
+button:hover {
+  background-color: rgba(240, 240, 240, 0.8);
+  color: #1b1b1b;
 }
 
 #start-btn:hover {
+  transition-duration: 1s;
   color: rgba(240, 240, 240, 0.8);
 }
 
@@ -91,4 +103,13 @@ h2 {
 
 .hide {
   display: none;
+}
+
+#result-div {
+  display: flex;
+  flex-direction: row;
+}
+
+#x-result {
+  margin-right: 20px;
 }
