Changed background color

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Roboto", sans-serif;
-  background: linear-gradient(to top, #000000, #434343);
+  background: #1a1a1b;
   width: 95%;
   height: 100%;
   color: #f0f0f0;
